[project]
name = "Merchant"
version = "1.0.0"

description = "A merchant that has new balls everyday!"
license = "MIT"  # replace with your own license
license-files = ["LICENSE"]
authors = [
    { name = "haymooed" },
]
readme = "README.md"

dependencies = [
    # you can require a specific version of ballsdex here
    "ballsdex>=3.0.0",
    # and extra dependencies if needed
]